Add row/colMins(), row/colMaxs(), and row/colRanges() methods for SVT_SparseMatrix objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ exportMethods(
     rowSums, colSums, rowMeans, colMeans,
 
     ## Methods for generics defined in the MatrixGenerics package:
+    rowMins, colMins, rowMaxs, colMaxs, rowRanges, colRanges,
     rowMedians, colMedians,
 
     ## Methods for generics defined in the S4Vectors package:
