--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,7 +96,7 @@ exportMethods(
 
     ## Methods for generics defined in the MatrixGenerics package:
     rowMins, colMins, rowMaxs, colMaxs, rowRanges, colRanges,
-    rowMedians, colMedians, rowVars, colVars,
+    rowMedians, colMedians, rowVars, colVars, rowSds, colSds,
 
     ## Methods for generics defined in the S4Vectors package:
     bindROWS,
