Add read_block_as_sparse() generic with default method
Also renamed dense2sparse() & sparse2dense() -> .dense2sparse() &
.sparse2dense(), and no longer export them.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,14 +5,14 @@ Description: Provides a convenient and efficient container for in-memory
 biocViews: Infrastructure, DataRepresentation
 URL: https://bioconductor.org/packages/SparseArray
 BugReports: https://github.com/Bioconductor/SparseArray/issues
-Version: 0.0.3
+Version: 0.0.4
 License: Artistic-2.0
 Encoding: UTF-8
 Author: Hervé Pagès <hpages.on.github@gmail.com>, Rafael A. Irizarry <rafa@ds.harvard.edu>, Vince Carey <stvjc@channing.harvard.edu>
 Maintainer: Hervé Pagès <hpages.on.github@gmail.com>
 Depends: R (>= 4.1.0), methods, stats, Matrix, BiocGenerics (>= 0.43.1),
-	MatrixGenerics, S4Vectors, S4Arrays (>= 0.3.6)
-Imports: IRanges, XVector
+	MatrixGenerics, S4Vectors, S4Arrays (>= 0.3.7)
+Imports: matrixStats, IRanges, XVector
 LinkingTo: S4Vectors, IRanges, XVector
 Suggests: DelayedArray, testthat, knitr, rmarkdown, BiocStyle
 VignetteBuilder: knitr
@@ -20,6 +20,8 @@ Collate: sparseMatrix-utils.R
 	SparseArray-class.R
 	COO_SparseArray-class.R
 	SVT_SparseArray-class.R
+	extract_sparse_array.R
+	read_block_as_sparse.R
 	SparseArray-subassignment.R
 	SparseArray-subsetting.R
 	SparseArray-combine.R
