Add rowsum() method for SVT_SparseMatrix objects

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ Collate: sparseMatrix-utils.R
 	SparseArray-misc-ops.R
 	SparseMatrix-mult.R
 	matrixStats-methods.R
+	rowsum-methods.R
 	randomSparseArray.R
 	readSparseCSV.R
 	zzz.R
