--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,9 +87,11 @@ exportMethods(
     var,
     nchar,
     crossprod, tcrossprod, "%*%",
+    Arith, Logic, Math, round, signif, Complex,
 
     ## Methods for generics defined in the methods package:
     coerce, show,
+    Compare,
 
     ## Methods for generics defined in the BiocGenerics package:
     cbind, rbind,
