--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ Collate: sparseMatrix-utils.R
 	SparseArray-Ops-methods.R
 	SparseArray-Math-methods.R
 	SparseArray-Complex-methods.R
-	SparseArray-misc-ops.R
+	SparseArray-misc-methods.R
 	SparseMatrix-mult.R
 	matrixStats-methods.R
 	rowsum-methods.R
