small code reorg

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Collate: sparseMatrix-utils.R
 	SVT_SparseArray-class.R
 	extract_sparse_array.R
 	read_block_as_sparse.R
+	SparseArray-ineffective-dims.R
 	SparseArray-subsetting.R
 	SparseArray-subassignment.R
 	SparseArray-combine.R
