--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,8 +74,7 @@ export(
 
 exportMethods(
     ## Methods for generics defined in the base package:
-    dim, "dim<-", dimnames, "dimnames<-", 
-    drop,
+    dim, dimnames, "dimnames<-",
     "[", "[<-",
     "[[",
     as.array,
