Add row/colAnys() + row/colAlls() + row/colProds() methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,11 +95,13 @@ exportMethods(
     ## Methods for generics defined in the BiocGenerics package:
     cbind, rbind,
     type, "type<-",
-    rowSums, colSums, rowMeans, colMeans,
 
     ## Methods for generics defined in the MatrixGenerics package:
+    rowAnys, colAnys, rowAlls, colAlls,
     rowMins, colMins, rowMaxs, colMaxs, rowRanges, colRanges,
-    rowMedians, colMedians, rowVars, colVars, rowSds, colSds,
+    rowSums, colSums, rowProds, colProds, rowMeans, colMeans,
+    rowVars, colVars, rowSds, colSds,
+    rowMedians, colMedians,
 
     ## Methods for generics defined in the S4Vectors package:
     bindROWS,
