--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 useDynLib(SparseArray)
 
 import(methods)
+importFrom(utils, packageVersion)
 importFrom(stats, setNames, rnorm, rpois)
 importClassFrom(Matrix, dgCMatrix, lgCMatrix, dgRMatrix, lgRMatrix)
 importFrom(Matrix, sparseMatrix, crossprod, tcrossprod)
