Fix for Clang 16
See https://github.com/Bioconductor/SparseArray/issues/9

Also:
- Bring back coercion from dgCMatrix to ngCMatrix. This is another
  critically endangered coercion method originally defined in the Matrix
  package but that the lazy Matrix maintainers have decided to eradicate
  from the surface of Earth in an attempt to make the life of their users
  no so easy.
- Add back and forth coersions between ngCMatrix and SVT_SparseMatrix
  objects.
- Add nzwhich() method for RsparseMatrix objects.
- Add nzvals() methods for ngCMatrix and ngRMatrix objects.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@ useDynLib(SparseArray)
 import(methods)
 importFrom(utils, packageVersion)
 importFrom(stats, setNames, rnorm, rpois)
-importClassFrom(Matrix, dgCMatrix, lgCMatrix, dgRMatrix, lgRMatrix)
+importClassFrom(Matrix, dgCMatrix, lgCMatrix, ngCMatrix,
+                        dgRMatrix, lgRMatrix, ngRMatrix)
 importFrom(Matrix, sparseMatrix, crossprod, tcrossprod)
 
 import(BiocGenerics)
