--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ exportMethods(
 
     ## Methods for generics defined in the BiocGenerics package:
     cbind, rbind,
+    pmin, pmax,
     type, "type<-",
 
     ## Methods for generics defined in the MatrixGenerics package:
