Replace rowsum() method for SVT_SparseMatrix objects with method for SparseMatrix objects that can handle COO_SparseMatrix objects.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,7 @@ S3method(range, COO_SparseArray)
 S3method(range, SVT_SparseArray)
 
 S3method(rowsum, dgCMatrix)
-S3method(rowsum, SVT_SparseMatrix)
+S3method(rowsum, SparseMatrix)
 
 S3method(t, SVT_SparseMatrix)
 
@@ -66,7 +66,7 @@ export(
     range.SVT_SparseArray,
 
     rowsum.dgCMatrix,
-    rowsum.SVT_SparseMatrix,
+    rowsum.SparseMatrix,
 
     t.SVT_SparseMatrix
 )
