--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,17 +13,21 @@ Description: The SparseArray package provides array-like containers for
 biocViews: Infrastructure, DataRepresentation
 URL: https://bioconductor.org/packages/SparseArray
 BugReports: https://github.com/Bioconductor/SparseArray/issues
-Version: 1.5.23
+Version: 1.5.24
 License: Artistic-2.0
 Encoding: UTF-8
 Authors@R: c(
 	person("Hervé", "Pagès", role=c("aut", "cre"),
-		email="hpages.on.github@gmail.com"),
+		email="hpages.on.github@gmail.com",
+		comment=c(ORCID="0009-0002-8272-4522")),
 	person("Vince", "Carey", role="fnd",
-		email="stvjc@channing.harvard.edu"),
+		email="stvjc@channing.harvard.edu",
+		comment=c(ORCID="0000-0003-4046-0063")),
 	person("Rafael A.", "Irizarry", role="fnd",
-		email="rafa@ds.harvard.edu"),
-	person("Jacques", "Serizay", role="ctb"))
+		email="rafa@ds.harvard.edu",
+		comment=c(ORCID="0000-0002-3944-4309")),
+	person("Jacques", "Serizay", role="ctb",
+		comment=c(ORCID="0000-0002-4295-0624")))
 Depends: R (>= 4.3.0), methods, Matrix, BiocGenerics (>= 0.43.1),
 	MatrixGenerics (>= 1.11.1), S4Vectors (>= 0.43.2), S4Arrays (>= 1.5.4)
 Imports: utils, stats, matrixStats, IRanges, XVector
