--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: The SparseArray package provides array-like containers for
 biocViews: Infrastructure, DataRepresentation
 URL: https://bioconductor.org/packages/SparseArray
 BugReports: https://github.com/Bioconductor/SparseArray/issues
-Version: 1.5.30
+Version: 1.5.31
 License: Artistic-2.0
 Encoding: UTF-8
 Authors@R: c(
@@ -29,7 +29,7 @@ Authors@R: c(
 	person("Jacques", "Serizay", role="ctb",
 		comment=c(ORCID="0000-0002-4295-0624")))
 Depends: R (>= 4.3.0), methods, Matrix, BiocGenerics (>= 0.43.1),
-	MatrixGenerics (>= 1.11.1), S4Vectors (>= 0.43.2), S4Arrays (>= 1.5.4)
+	MatrixGenerics (>= 1.11.1), S4Vectors (>= 0.43.2), S4Arrays (>= 1.5.6)
 Imports: utils, stats, matrixStats, IRanges, XVector
 LinkingTo: S4Vectors, IRanges, XVector
 Suggests: HDF5Array, ExperimentHub, testthat, knitr, rmarkdown, BiocStyle
@@ -60,7 +60,8 @@ Collate: utils.R
 	randomSparseArray.R
 	readSparseCSV.R
 	NaArray-class.R
-	NaArray-subsetting.R
 	NaArray-aperm.R
+	NaArray-subsetting.R
+	NaArray-subassignment.R
 	NaArray-abind.R
 	zzz.R
