--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: The SparseArray package provides array-like containers for
 biocViews: Infrastructure, DataRepresentation
 URL: https://bioconductor.org/packages/SparseArray
 BugReports: https://github.com/Bioconductor/SparseArray/issues
-Version: 1.5.36
+Version: 1.5.37
 License: Artistic-2.0
 Encoding: UTF-8
 Authors@R: c(
@@ -69,5 +69,6 @@ Collate: utils.R
 	NaArray-summarization.R
 	NaArray-Arith-methods.R
 	NaArray-Compare-methods.R
+	NaArray-Logic-methods.R
 	NaArray-matrixStats.R
 	zzz.R
