Implement Math and Math2 operations on NaArray objects

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -70,5 +70,6 @@ Collate: utils.R
 	NaArray-Arith-methods.R
 	NaArray-Compare-methods.R
 	NaArray-Logic-methods.R
+	NaArray-Math-methods.R
 	NaArray-matrixStats.R
 	zzz.R
