Add is_nonzero() methods for SVT_SparseArray and COO_SparseArray objects.
Also add is_nonna(), is.nan(), and is.infinite() methods for NaArray
objects.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -73,5 +73,6 @@ Collate: utils.R
 	NaArray-Compare-methods.R
 	NaArray-Logic-methods.R
 	NaArray-Math-methods.R
+	NaArray-misc-methods.R
 	NaArray-matrixStats.R
 	zzz.R
